Proyecto Final :rocket:

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /122-InstanceOf/nbproject/private/
 /122-InstanceOf/build/
 /124-ConversionObjetos/nbproject/private/
+/151-Laboratorio-Final-Peliculas/nbproject/private/
+/151-Laboratorio-Final-Peliculas/build/
